# tokenizer

./: .gitignore  CLAUDE.md  README.md  benchmark_patterns.py  check_submission.py  explore_tokenizer.ipynb  explore_tokenizer_executed.ipynb  generate_tokenizers.py  init.sh  pyproject.toml  report_209361153.md  train_command.txt  tune_tokenizers.py
code/: base_tokenizer.py  bpe_tokenizer.py  test_tokenizer.py  train_ner_model.py  train_tokenizer.py
